--- a/task1/task1.html
+++ b/task1/task1.html
@@ -12,7 +12,7 @@
     <h1>Практическое задание №1</h1>
     <hr>
     <h2>Анкета о себе</h2>
-    <img src="im.jpg" alt="Изображение" width="50%">
+    <img src="IM.jpg" alt="Изображение" width="50%">
     <p>Привет! Меня зовут Виктор.</p>
     <hr>
     <h3>Стек навыков</h3>
@@ -35,5 +35,6 @@
     </a>
 
 </body>
+
 
 </html>
