--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="task1/task1.html"> 
             <li>Практическое задание №1</li> 
         </a>
-        <a href=""> 
+        <a href="task2/task2.html"> 
             <li>Практическое задание №2</li> 
         </a>
         <a href=""> 
@@ -30,4 +30,5 @@
     </ol>
 
 </body>
+
 </html>
