--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <a href="task2/task2.html"> 
             <li>Практическое задание №2</li> 
         </a>
-        <a href=""> 
+        <a href="task3/task3.html"> 
             <li>Практическое задание №3</li> 
         </a>
-        <a href=""> 
+        <a href="task4/task4.html"> 
             <li>Практическое задание №4</li> 
         </a>
     </ol>
@@ -32,3 +32,4 @@
 </body>
 
 </html>
+
